fix: position floating-ui elements offscreen by default in order to prevent scrollbars

--- a/packages/calcite-components/src/assets/styles/_floating-ui.scss
+++ b/packages/calcite-components/src/assets/styles/_floating-ui.scss
@@ -34,7 +34,7 @@ $floating-ui-transition-offset: 5px;
 
 @mixin floating-ui-anim-active {
   opacity: 1;
-  inset-block: 0;
+  inset-block-start: 0;
   left: 0;
 }
 
@@ -94,6 +94,11 @@ $floating-ui-transition-offset: 5px;
   z-index: var(--calcite-floating-ui-z-index);
 }
 
+@mixin floating-ui-container-hidden() {
+  inset-inline-start: -999999px;
+  inset-block-start: -999999px;
+}
+
 @mixin floating-ui-wrapper {
   visibility: hidden;
 }
@@ -105,6 +110,10 @@ $floating-ui-transition-offset: 5px;
 @mixin floating-ui-host() {
   :host {
     @include floating-ui-container();
+  }
+
+  :host([calcite-hydrated-hidden]) {
+    @include floating-ui-container-hidden();
   }
 
   @include floating-ui-host-anim();
